Add Content Page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="/css/style.css" rel="stylesheet">
     </head>
     <body>
+        <h1>Hello</h1>
     
     </body>
 </html>
