--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <link href="/css/style.css" rel="stylesheet">
     </head>
     <body>
-    
+    <h1>Hello-Word</h1>
     </body>
 </html>
