--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/css/admin.min.css" rel="stylesheet">
-        <link href="/css/init.css" rel="stylesheet">
-        <link href="/css/media.css" rel="stylesheet">
-        <link href="/css/sb-library-font.css" rel="stylesheet">
-        <link href="/css/sb-library.css" rel="stylesheet">
-        <link href="/css/style.css" rel="stylesheet">
+        <link href="https://github.com/youraccounts/Home/blob/main/css/admin.min.css" rel="stylesheet">
+        <link href="https://github.com/youraccounts/Home/blob/main/css/init.css" rel="stylesheet">
+        <link href="https://github.com/youraccounts/Home/blob/main/css/media.css" rel="stylesheet">
+        <link href="https://github.com/youraccounts/Home/blob/main/css/sb-library-font.css" rel="stylesheet">
+        <link href="https://github.com/youraccounts/Home/blob/main/css/sb-library.css" rel="stylesheet">
+        <link href="https://github.com/youraccounts/Home/blob/main/css/style.css" rel="stylesheet">
     </head>
     <body>
-    <h1 class="red">Hello-Word</h1>
+    <h1 class="red center">Hello-Word</h1>
     </body>
 </html>
