--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://github.com/youraccounts/Home/blob/main/css/admin.min.css" rel="stylesheet">
-        <link href="https://github.com/youraccounts/Home/blob/main/css/init.css" rel="stylesheet">
-        <link href="https://github.com/youraccounts/Home/blob/main/css/media.css" rel="stylesheet">
-        <link href="https://github.com/youraccounts/Home/blob/main/css/sb-library-font.css" rel="stylesheet">
-        <link href="https://github.com/youraccounts/Home/blob/main/css/sb-library.css" rel="stylesheet">
-        <link href="https://github.com/youraccounts/Home/blob/main/css/style.css" rel="stylesheet">
+        <link href="https://855.netlify.app/css/admin.min.css" rel="stylesheet">
     </head>
     <body>
     <h1 class="red center">Hello-Word</h1>
